Removed margin bottom from h4 in menu to fix spacing error

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -15,7 +15,6 @@
   h4 {
     font-size: 1.2rem;
     font-weight: 400;
-    margin-bottom: 0.5rem;
   }
 
   a:link,
